$Id: ChangeLog 4297 2016-04-16 16:48:01Z chrfranke $

2016-04-16  Christian Franke  <franke@computer.org>

	nvmecmds.cpp, nvmecmds.h: Add Identify Namespace support.

2016-04-15  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix harmless bug in errno check of HPTIO_CTL ioctl()
	calls.  Bug was introduced 10 years ago in r2237.

2016-04-15  Yuriy M. Kaminskiy  <yumkam@gmail.com>

	os_linux.cpp: Fix harmless bug in errno check of HDIO_DRIVE_TASK*
	ioctl() calls.  Bug was introduced 12 years ago in r1609, the fix
	in r4003 was incomplete.

2016-04-14  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Fix size factor of Data Units Read/Written counters.
	os_win32.cpp: Fix device count in win_nvme_device::open().

	Thanks to Oliver Bruchmann for bug reports and testing.

2016-04-12  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: improve handling when no tape cartridge is
	in the tape drive.

2016-04-12  Alex Samorukov  <samm@os2.kiev.ua>

	scsiprint.cpp, smartd.cpp: workaround for the buggy ST8000NM0075/E001,
	request log page list with a fixed length (ticket #678).

2016-04-11  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add Samsung SM863 series, ticket #681

2016-04-10  Christian Franke  <franke@computer.org>

	os_win32.cpp: Include also unknown and unsupported USB devices
	in device scan result.  Move USB device handling to new function.
	Add Windows Server 2016 to get_os_version_str().

	AUTHORS: Add Thomas Gatterweh.
	smartd.cpp: Check is_powered_down() also with '-n sleep'.

2016-04-10  Thomas Gatterweh  <thomas_gatterweh@hotmail.com>

	Prevent drive spin up by '-n standby' check on Windows (ticket #677):
	dev_interface.cpp, dev_interface.h:
	Add smart_device::is_powered_down().
	os_win32.cpp: Add win_ata_device::is_powered_down().  Open device
	without READ or WRITE access to prevent spin up.
	smartctl.cpp, smartd.cpp: Add check for is_powered_down().

2016-04-09  Christian Franke  <franke@computer.org>
